add Date Communications and Networking

--- a/notes.css
+++ b/notes.css
@@ -74,7 +74,7 @@ h1{
 }
 .item2{
     padding: 50px 200px;
-    background: #ffd591;
+    background: #f9fcff;
     border-radius: 20px;
     box-shadow: 10px 10px #157b76;
     border: 2px solid #157b76;
