--- a/notes.css
+++ b/notes.css
@@ -23,7 +23,23 @@ h1{
     font-weight: bold;
     color:var(--second);
 }
-
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding:10px;
+}
+table{
+    width:100%;
+}
+th{
+    width:20%;
+}
+td{
+    width:20%;
+}
+img{
+    width:500px;
+}
 
 #header{
     background-image: linear-gradient(120deg, aliceblue, white);
